@@ -126,7 +126,7 @@ ul li {
     vertical-align: middle;
 }
 
-.button {
+.button, .buttonlist ul li a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 85%;
     border: 1px solid #005D8C;
