@@ -7,7 +7,7 @@
 <title>{TITLE}</title>
 {META}
 <link rel="stylesheet" href="css/coppermine.css" type="text/css" />
-<link rel="stylesheet" href="themes/water_drop/style.css" type="text/css" />
+<link rel="stylesheet" href="themes/sample/style.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
 {JAVASCRIPT}
 <!--
