@@ -130,7 +130,7 @@ ul li {
     vertical-align : middle;
 }
 
-.button {
+.button, .buttonlist ul li a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 90%;
     border: 1px solid #CCD7E0;
